objects/Client_Note__c.object
<CustomObject>
    <label>Client Note</label>
    <nameField>
        <label>Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Field_BC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Field BC</label>
        <referenceTo>BC__c</referenceTo>
        <relationshipLabel>Client Notes</relationshipLabel>
        <relationshipName>Client_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>